2009-02-03  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: re-add checks for XFree86 (add --without-xorg-x11r7 flag)

	* README.IMPORTANT: updated

2009-02-02  Christopher Bratusek <zanghar@freenet.de>
	* Makefile.in: create $DESTDIR$datadir/applications before 
	               installing desktop file into it

	* */Makefile.in: add distclean rule to all subdir Makefiles

	* autogen.sh: - make sure we check if intltoolize successfully exited
		      - make sure we don't use bash-specific syntax [Mark Diekhans]
		      - don't -I /usr/share/aclocal/ [Mark Diekhans]

	* configure.in: print usefull stuff at the end of configure

2009-02-01  Christopher Bratusek <zanghar@freenet.de>
	* MAINTAINERS: updated my mail address

	* autogen.sh
	* configure.in: intltoolize sawfish

	* po/LINGUAS: added

	* po/POTFILES.in: updated

	* po/Makefile.in
	* po/make-pot
	* po/sawfish.pot
	* po/sawfish-xgettext
	* po/update.sh
	* po/README: removed

	* lisp/sawfish/wm/animation/outline.jl
	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/ext/tooltips.jl
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/ext/audio-events.jl
	* lisp/sawfish/wm/ext/error-handler.jl
	* lisp/sawfish/wm/ext/shade-hover.jl
	* lisp/sawfish/wm/ext/window-history.jl
	* lisp/sawfish/wm/ext/auto-raise.jl
	* lisp/sawfish/wm/workspace.jl
	* lisp/sawfish/wm/placement.jl
	* lisp/sawfish/wm/custom.jl
	* lisp/sawfish/wm/state/iconify.jl
	* lisp/sawfish/wm/state/maximize.jl
	* lisp/sawfish/wm/state/transient.jl
	* lisp/sawfish/wm/focus.jl
	* lisp/sawfish/wm/viewport.jl
	* lisp/sawfish/wm/window-anim.jl
	* lisp/sawfish/wm/windows.jl
	* lisp/sawfish/wm/commands/move-cursor.jl
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/commands/xterm.jl
	* lisp/sawfish/wm/commands/x-cycle.jl
	* lisp/sawfish/wm/commands/move-resize.jl
	* lisp/sawfish/wm/stacking.jl
	* lisp/sawfish/wm/placement/stagger.jl
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/util/prompt.jl