@@ -3,6 +3,8 @@
 
 	* README.IMPORTANT: updated
 
+	* install-sh: added for libtool < 2.2
+
 2009-02-02  Christopher Bratusek <zanghar@freenet.de>
 	* Makefile.in: create $DESTDIR$datadir/applications before 
 	               installing desktop file into it
